v0.7 - Changes include:  * [New] Added changelog.txt  * [Changed] Made gallery react to responsive width  * [Changed] Images won't get scaled bigger than their dimensions (i.e. not stretched)  * [Changed] The way images are centered. Removed centreImage() func but lost support for IE7  * [Fixed] Gallery width and height can now be overwritten properly  * [Fixed] Added padding to HTML slide in fullscreen mode so caption doesn't obscure content  * [Fixed] Added bottom margin to Gallery to push content below navbar

--- a/demo/style.css
+++ b/demo/style.css
@@ -74,10 +74,6 @@ a:hover, a:active {
 h1, h2, h3, h4, h5, h6 {
 	line-height:1.2;
 	margin-bottom:0.6em;
-    /* Smooter @font-face embedding in IE */
-    /*letter-spacing: 0;
-    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src=hIEfix.png,sizingMethod=crop);
-    zoom:1;*/
 }
 h1 { /* Assume used once for page title */
 	font-size:2.2em;
@@ -157,6 +153,5 @@ button {  width: auto; overflow: visible; }
 /*=== Structure Styles ===*/
 /*========================*/
 #wrapper {
-    width:700px;
-    margin:100px auto;
+    margin:200px;
 }
